# log-analyzer

./: Cargo.toml  README.md  summary.json
src/: analyze.rs  main.rs  model.rs  parse.rs  report.rs  ui.rs  viz.rs
